--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <span></span>
     <h1>EA Masters screen test</h1>
     <input type="text" placeholder="Enter a value" class="valueInput">
 
