--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <h1>The below should should the value</h1>
+    <h1>The below should be the value</h1>
     <span class="value">NULL</span>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
